# grimoire-lang

./: CMakeLists.txt  README.md
cmake/: ExternalAntlr4Cpp.cmake
example_progs/: arr_test.bc  arr_test.cpp  arr_test.ll  arr_test.s  fib  fib.out  fib.sigil  func_print  func_print.out  func_print.sigil  nested_x.sigil  sample.ll
src/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acc_gen.vcxproj  antlr4_runtime-build_shared.vcxproj  antlr4_runtime-build_shared.vcxproj.filters  antlr4_runtime-build_static.vcxproj  antlr4_runtime-build_static.vcxproj.filters  antlr4_runtime.vcxproj  antlr4_runtime.vcxproj.filters  cmake_install.cmake  generateParser.bat  grimoire.g4  grimoire.vcxproj  grimoire.vcxproj.filters  grimoire_lang.sln  intrinsics_gen.vcxproj  llvm_flags.txt  main.cpp  omp_gen.vcxproj
src/.antlr/: grimoire.interp  grimoireLexer.java  grimoireParser.java
src/antlr-generated/: grimoire.interp  grimoire.tokens  grimoireBaseListener.cpp  grimoireBaseListener.h  grimoireBaseVisitor.cpp  grimoireBaseVisitor.h  grimoireLexer.cpp  grimoireLexer.h  grimoireLexer.interp  grimoireLexer.tokens  grimoireListener.cpp  grimoireListener.h  grimoireParser.cpp  grimoireParser.h  grimoireVisitor.cpp  grimoireVisitor.h
src/antlr4_runtime/src/antlr4_runtime-stamp/: antlr4_runtime-gitclone-lastrun.txt
src/antlr4_runtime/tmp/: antlr4_runtime-cfgcmd.txt  antlr4_runtime-gitclone.cmake  antlr4_runtime-gitupdate.cmake  antlr4_runtime-mkdirs.cmake
src/grimoire/: ast.h  compiler.cpp  compiler.h  declaration.cpp  declaration.h  exception.h  generator.cpp  generator.h  parser.cpp  parser.h  symtab.cpp  symtab.h
src/grimoire.dir/Debug/: grimoire.exe.recipe
src/grimoire.dir/Debug/grimoire.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
src/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
src/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
src/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/x64/Debug/antlr4_runtime/: antlr4_runtime.recipe
src/x64/Debug/antlr4_runtime-build_static/: antlr4_runtime-build_static.recipe
src/x64/Debug/antlr4_runtime-build_static/antlr4_r.4B631D31.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  antlr4_runtime-build_static.lastbuildstate
src/x64/Debug/antlr4_runtime/antlr4_runtime.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
